# all41n14lla

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  ORIGIN.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
docs/: README.md  architecture.md  comparison.md  demo-script.md  quickstart-claude-desktop.md  savant-cognition.md  why.md
src/all41n14lla/: __init__.py  __main__.py  cli.py  server.py  watcher.py
src/all41n14lla/engine/: __init__.py  nodes.py  pathways.py  retrieval.py  search.py  storage.py
src/all41n14lla/templates/starter-pack/: README.md
tests/: conftest.py  test_cli.py  test_nodes.py  test_pathways.py  test_server.py  test_storage.py  test_watcher.py
